# newsfetch

./: .gitignore  README.md  debug_feishu.py  pyproject.toml  requirements.txt
scripts/: run_hidden.vbs  run_ingest_news.cmd  run_pipeline_now.cmd  run_score_news.cmd  run_startup_bootstrap.cmd  run_summarize_push.cmd
src/news_pipeline/: __init__.py  config.py  feishu_api.py  ingest_news.py  rss_fetcher.py  runner.py  score_news.py  scoring.py  summarize_push.py  summarizer.py
src/news_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_feishu_api.py  test_rss_fetcher.py  test_scoring.py
